native/output.txt
    Checking reality-core v0.2.0 (E:\mlauncher\ml-client\native)
warning: unused import: `DateTime`
  --> src\instance\mod.rs:13:14
   |
13 | use chrono::{DateTime, Utc};
   |              ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Write`
  --> src\extract\mod.rs:11:21
   |
11 | use std::io::{Read, Write};
   |                     ^^^^^

error[E0382]: use of moved value: `native_path_str`
   --> src\launcher\mod.rs:338:51
    |
328 | ...                   let native_path_str = native_path.to_string_lossy().to_string();
    |                           ---------------   ----------------------------------------- this reinitialization might get skipped
    |                           |
    |                           move occurs because `native_path_str` has type `std::string::String`, which does not implement the `Copy` trait
...
333 | ...                           path: native_path_str,
    |                                     --------------- value moved here
...
338 | ...                   native_files.push(native_path_str);
    |                                         ^^^^^^^^^^^^^^^ value used here after move
    |
help: consider cloning the value if the performance cost is acceptable
    |
333 |                                         path: native_path_str.clone(),
    |                                                              ++++++++

warning: unused import: `Digest`
  --> src\download\mod.rs:11:20
   |
11 | use sha2::{Sha256, Digest as Sha256Digest};
   |                    ^^^^^^

For more information about this error, try `rustc --explain E0382`.
warning: `reality-core` (lib) generated 3 warnings
error: could not compile `reality-core` (lib) due to 1 previous error; 3 warnings emitted
